# GithubRepoMonitor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: *.instructions.md
deploy/: README.md  install.sh
deploy/logrotate/: monitor
deploy/systemd/: monitor-backup.service  monitor-backup.timer  monitor-health.service  monitor-health.timer  monitor.service
deploy/templates/: config.json.example  monitor.env.example
docs/superpowers/plans/: 2026-04-17-m1-scaffolding.md  2026-04-17-m2-github-client.md  (+4 more)
scripts/: backup.sh  healthcheck.py
src/: github_repo_monitor.py
src/monitor/: __main__.py  config.py  db.py  logging_config.py  main.py  models.py  scheduler.py  state.py
tests/: test_monitor.py
tests/fixtures/: github_payloads.py
tests/integration/: test_main_lifecycle.py  test_pipeline_m2.py  test_pipeline_m3.py  test_pipeline_m4.py
tests/unit/: test_bot_app.py  test_bot_commands.py  test_bot_commands_digest_now.py  test_bot_feedback.py  test_bot_push.py  test_bot_render.py  test_collect.py  test_config.py  test_db.py  test_db_m4_dao.py  test_db_m5_dao.py  test_db_scoring_dao.py  test_enrich.py  test_github_client.py  test_healthcheck.py  test_heuristic.py  test_llm_client.py  test_llm_generate_text.py  test_logging_config.py  test_models.py  test_pipeline_digest.py  test_pipeline_filter.py  test_pipeline_surge.py  test_pipeline_weekly.py  test_preference.py  test_rate_limit.py  test_rule_engine.py  test_scheduler.py  test_score.py  test_scoring_types.py  test_state.py
(+20 files in other folders)
