[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor"
version = "0.1.0"
description = "GitHub 开源项目监控（产品化版）"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.39",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10",
    "tenacity>=8.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
monitor = "monitor.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
